--- a/src/styles/homepage.module.css
+++ b/src/styles/homepage.module.css
@@ -10,6 +10,10 @@
   margin-top: var(--normal-margin-top);
   padding-top: 10px;
   animation: fadeIn var(--normal-transition-time) ease-in-out 0s;
+  text-align: justify;
+  text-justify: inter-word;
+  word-wrap: break-word;
+  hyphens: auto;
 }
 
 /* Skills Section */
